kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-teste
spec:
  finalizers:
  - kubernetes
