kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  namespace: devops-teste
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: devops-app
  sessionAffinity: None
  type: ClusterIP
